# gh-demo-app-wasmcon

./: Cargo.toml
src/: .lib.rs.swp  bindings.rs  lib.rs
wit/: world.wit
