[package]
name = "gh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_qs = "0.13.0"
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }
markdown = "=1.0.0-alpha.16"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:gh"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:http" = "0.2.0"
"wasi:keyvalue" = "0.2.0-draft2"
